tests/bad_programs/semantic_errors/while_double_is_not_true.notc
int main() {
    double d = 3;
    while (d != true) {
    }
    return 0;
}
